; ModuleID = '/home/carl/AnghaBench/linux/drivers/scsi/extr_initio.c_initio_msgout_abort_targ.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/scsi/extr_initio.c_initio_msgout_abort_targ.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.initio_host = type { i64, i64 }

@TUL_SSignal = common dso_local global i64 0, align 8
@TSC_SET_ACK = common dso_local global i32 0, align 4
@TSC_SET_ATN = common dso_local global i32 0, align 4
@MSG_OUT = common dso_local global i64 0, align 8
@MSG_ABORT = common dso_local global i32 0, align 4
@TUL_SFifo = common dso_local global i64 0, align 8
@TSC_XF_FIFO_OUT = common dso_local global i32 0, align 4
@TUL_SCmd = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.initio_host*)* @initio_msgout_abort_targ to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @initio_msgout_abort_targ(%struct.initio_host* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.initio_host*, align 8
  store %struct.initio_host* %0, %struct.initio_host** %3, align 8
  %4 = load %struct.initio_host*, %struct.initio_host** %3, align 8
  %5 = getelementptr inbounds %struct.initio_host, %struct.initio_host* %4, i32 0, i32 1
  %6 = load i64, i64* %5, align 8
  %7 = load i64, i64* @TUL_SSignal, align 8
  %8 = add nsw i64 %6, %7
  %9 = call i32 @inb(i64 %8)
  %10 = load i32, i32* @TSC_SET_ACK, align 4
  %11 = or i32 %10, 7
  %12 = and i32 %9, %11
  %13 = load i32, i32* @TSC_SET_ATN, align 4
  %14 = or i32 %12, %13
  %15 = load %struct.initio_host*, %struct.initio_host** %3, align 8
  %16 = getelementptr inbounds %struct.initio_host, %struct.initio_host* %15, i32 0, i32 1
  %17 = load i64, i64* %16, align 8
  %18 = load i64, i64* @TUL_SSignal, align 8
  %19 = add nsw i64 %17, %18
  %20 = call i32 @outb(i32 %14, i64 %19)
  %21 = load %struct.initio_host*, %struct.initio_host** %3, align 8
  %22 = call i32 @initio_msgin_accept(%struct.initio_host* %21)
  %23 = icmp eq i32 %22, -1
  br i1 %23, label %24, label %25

24:                                               ; preds = %1
  store i32 -1, i32* %2, align 4
  br label %51

25:                                               ; preds = %1
  %26 = load %struct.initio_host*, %struct.initio_host** %3, align 8
  %27 = getelementptr inbounds %struct.initio_host, %struct.initio_host* %26, i32 0, i32 0
  %28 = load i64, i64* %27, align 8
  %29 = load i64, i64* @MSG_OUT, align 8
  %30 = icmp ne i64 %28, %29
  br i1 %30, label %31, label %34

31:                                               ; preds = %25
  %32 = load %struct.initio_host*, %struct.initio_host** %3, align 8
  %33 = call i32 @initio_bad_seq(%struct.initio_host* %32)
  store i32 %33, i32* %2, align 4
  br label %51

34:                                               ; preds = %25
  %35 = load i32, i32* @MSG_ABORT, align 4
  %36 = load %struct.initio_host*, %struct.initio_host** %3, align 8
  %37 = getelementptr inbounds %struct.initio_host, %struct.initio_host* %36, i32 0, i32 1
  %38 = load i64, i64* %37, align 8
  %39 = load i64, i64* @TUL_SFifo, align 8
  %40 = add nsw i64 %38, %39
  %41 = call i32 @outb(i32 %35, i64 %40)
  %42 = load i32, i32* @TSC_XF_FIFO_OUT, align 4
  %43 = load %struct.initio_host*, %struct.initio_host** %3, align 8
  %44 = getelementptr inbounds %struct.initio_host, %struct.initio_host* %43, i32 0, i32 1
  %45 = load i64, i64* %44, align 8
  %46 = load i64, i64* @TUL_SCmd, align 8
  %47 = add nsw i64 %45, %46
  %48 = call i32 @outb(i32 %42, i64 %47)
  %49 = load %struct.initio_host*, %struct.initio_host** %3, align 8
  %50 = call i32 @initio_wait_disc(%struct.initio_host* %49)
  store i32 %50, i32* %2, align 4
  br label %51

51:                                               ; preds = %34, %31, %24
  %52 = load i32, i32* %2, align 4
  ret i32 %52
}

declare dso_local i32 @outb(i32, i64) #1

declare dso_local i32 @inb(i64) #1

declare dso_local i32 @initio_msgin_accept(%struct.initio_host*) #1

declare dso_local i32 @initio_bad_seq(%struct.initio_host*) #1

declare dso_local i32 @initio_wait_disc(%struct.initio_host*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
